Added lodash dependecy for js

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/lypnol/adventofcode-2017#readme",
   "dependencies": {
+    "lodash": "^4.17.4",
     "underscore": "^1.8.3"
   }
 }
